<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_home"
        android:orderInCategory="2"
        />
    <item
        android:id="@+id/profile"
        android:title="@string/my_profile"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_name"

        android:orderInCategory="4"
        />
    <item
    android:id="@+id/logout"
    android:title="@string/logout"
        android:orderInCategory="5"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/kiswahili"
        android:title="@string/kiswahili"
        android:orderInCategory="10"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/english"
        android:title="@string/english"
        android:orderInCategory="9"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/German"
        android:title="German"
        android:orderInCategory="11"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:orderInCategory="20"
        app:showAsAction="never"
        />


</menu>